@@ -1,6 +1,5 @@
 debian/tmp/usr/include
 debian/tmp/usr/lib/*.so
-debian/tmp/usr/lib/*.la
 debian/tmp/usr/lib/*.a
 debian/tmp/usr/lib/pkgconfig
 
